Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Jun-2011 Mark Dexter
 # [#26028] Fix backward incompatible changes to JVersion
 # [#25634] Extension Manager: wrong installer method called during update

04-Jun-2011 Andrew Eddie
 + Feature [#25866] Add support to log deprecated API.
 + Feature [#25987] JToolBarHelper functions for Save and Create New and Save as Copy (Joseph LeBlanc).
 + Feature [#25732] Add JFormRuleOptions rule to validate type="list" parameters (Mark Dexter).
 + Feature [#25461] Mod_custom with backgroundimages (Angie Radtke).
 + Feature [#25119] Allow preselection of categories in com_content (Peter Kneisel, Ole Bang Ottosen, Jean-Marie Simonet).
 
03-Jun-2011 Jean-Marie Simonet
 + [#26035] *Adding the possibility for language packs to include a css file for back-end font change
 # [#25918] *Error when Login Module try to get the return URL of the current page when SEF turn on and the page is redirect forever

01-Jun-2011 Jean-Marie Simonet
 #$ [#26023] *Preventing setting more than 1 default home menu item per menu

========== VERSION 1.7 ALPHA RELEASED ==========

31-May-2011 Mark Dexter
 # [#25058] While the site is offline managers and administrators can't login.
 # [#25905] Purge Expired Cache remove administrator/cache/index.html file
 # [#25971] Administrator language file en-GB.com_languages.ini. unclosed 'em' tag at Definition COM_LANGUAGES_FIELD_LANG_CODE_DESC text

31-May-2011 Jean-Marie Simonet
 # [#26012] *Archives Module & Related Articles Module do not use localised calendar date
 
30-May-2011 Mark Dexter
 # [#26004] *Back-end language change broken by framework patch in tracker #25925
 # [#25956] Improve accessibility in admin modules
 # [#25904] loadposition: modules with double slashes and slash dollar return without leading slash